--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,19 +6,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
     <com.asus.launcher.settings.developer.chart.ChartView
         android:id="@+id/chart_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="0dp"></com.asus.launcher.settings.developer.chart.ChartView>
+        android:layout_height="match_parent"></com.asus.launcher.settings.developer.chart.ChartView>
 
     <com.asus.launcher.settings.developer.chart.pager.ChartInfoPager
         android:id="@+id/chart_pager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:layout_weight="1">
 
