--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,31 +1,34 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="horizontal"
-    tools:context=".MainActivity">
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
+    android:paddingTop="3dp"
+    android:paddingBottom="3dp">
 
-    <com.asus.launcher.settings.developer.chart.ChartView
-        android:id="@+id/chart_view"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"></com.asus.launcher.settings.developer.chart.ChartView>
-
-    <com.asus.launcher.settings.developer.chart.pager.ChartInfoPager
-        android:id="@+id/chart_pager"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:layout_weight="1">
+        android:orientation="horizontal">
 
-        <android.support.v4.view.PagerTabStrip
-            android:id="@+id/pager_tab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"></android.support.v4.view.PagerTabStrip>
-    </com.asus.launcher.settings.developer.chart.pager.ChartInfoPager>
-</LinearLayout>
+        <com.asus.launcher.settings.developer.chart.ChartView
+            android:id="@+id/chart_view"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"></com.asus.launcher.settings.developer.chart.ChartView>
+
+        <com.asus.launcher.settings.developer.chart.pager.ChartInfoPager
+            android:id="@+id/chart_pager"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <android.support.v4.view.PagerTabStrip
+                android:id="@+id/pager_tab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"></android.support.v4.view.PagerTabStrip>
+        </com.asus.launcher.settings.developer.chart.pager.ChartInfoPager>
+    </LinearLayout>
+</FrameLayout>
